BASIRA #22 - Adjusting artworks image style

--- a/client/src/pages/admin/Artworks.css
+++ b/client/src/pages/admin/Artworks.css
@@ -1,5 +1,5 @@
 .artworks .ui.cards > .card > .image,
-.artworks .ui.items > .item > .image {
+.artworks .ui.items > .item > .image:not(.ui) {
   width: unset;
 }
 
