--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.ui.items > .item > .content > .header > a:hover {
+  text-decoration: underline;
+  text-decoration-color: rgba(0, 0, 0, 0.87);
+}
