BASIRA #55 - Adjusting the AccordionMenu styles so that titles wrap within the width of the menu

--- a/client/src/components/AccordionMenu.css
+++ b/client/src/components/AccordionMenu.css
@@ -23,3 +23,11 @@
   object-fit: cover;
   width: 40px;
 }
+
+.accordion-menu .nested-accordion .item-container .title {
+  white-space: normal;
+}
+
+.accordion-menu .nested-accordion .title > .container > .right-container {
+  padding-left: 1em;
+}
