--- a/client/src/pages/admin/Artworks.css
+++ b/client/src/pages/admin/Artworks.css
@@ -1,3 +1,9 @@
+.artworks .ui.cards {
+  margin-bottom: 1em;
+  margin-top: 1em;
+  justify-content: center;
+}
+
 .artworks .ui.cards > .card > .image,
 .artworks .ui.items > .item > .image:not(.ui) {
   width: unset;
