BASIRA #131 - Update landing page title/subtitle

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -3,9 +3,16 @@
 }
 
 .home .ui.header.huge .sub.header {
-  font-size: 0.3em;
+  font-size: 0.4em;
+}
+
+.home .description {
+  font-size: 1.2em;
   padding-bottom: 1em;
   padding-top: 1em;
+  font-weight: 400;
+  line-height: 1.2em;
+  color: rgba(0,0,0,.6);
 }
 
 .home .image-container {
