BASIRA #183 - Adding read only artwork page and supporting components

--- a/client/src/components/RecordPage.css
+++ b/client/src/components/RecordPage.css
@@ -20,3 +20,13 @@
   justify-content: center;
   font-weight: bold;
 }
+
+.record-page .image-container.ui.container {
+  display: flex;
+  justify-content: center;
+}
+
+.record-page .lazy-image {
+  width: fit-content;
+}
+
