BASIRA #187 - Upgrading react-components to latest version; Initial setup of search page

--- a/client/src/components/SimpleLink.css
+++ b/client/src/components/SimpleLink.css
@@ -1,8 +1,8 @@
-.link {
+.simple-link {
   color: unset;
 }
 
-.link:hover {
+.simple-link:hover {
   color: unset;
   text-decoration: underline;
   text-decoration-color: rgba(0, 0, 0, 0.87);
