--- a/client/src/pages/Search.css
+++ b/client/src/pages/Search.css
@@ -18,3 +18,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.search .stats-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 0.5em;
+}
