--- a/client/src/components/SearchThumbnail.css
+++ b/client/src/components/SearchThumbnail.css
@@ -6,6 +6,24 @@
   margin-bottom: 0;
 }
 
+.search-images.image > .lazy-image > img,
+.search-images.image > .lazy-image > .lazy-loader,
+.search-images.image > .lazy-image > .placeholder-image {
+  aspect-ratio: 1 / 1;
+  border: none;
+  object-fit: cover;
+}
+
+.search-images.image > .lazy-image > .placeholder-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-images.image .icon {
+  color: rgba(0, 0, 0, 0.87);
+}
+
 .search-images.image > .label {
   position: absolute;
   bottom: 10px;
@@ -18,14 +36,4 @@
   color: #FFFFFF;
   background-color: #111111;
   opacity: 0.7;
-}
-
-.search-images.image > img {
-  aspect-ratio: 1 / 1;
-  border: none;
-  object-fit: cover;
-}
-
-.search-images.image .icon {
-  color: rgba(0, 0, 0, 0.87);
 }
