BASIRA #230 - Adding expand/collapse all buttons to SearchFacets component

--- a/client/src/components/SearchFacets.css
+++ b/client/src/components/SearchFacets.css
@@ -1,3 +1,7 @@
 .search-facets h3.header {
   margin-bottom: 1em;
 }
+
+.search-facets .link-button.ui.button.basic.compact {
+  margin-right: 1em;
+}
