BASIRA #270 - Refactoring artwork, physical component, visual context, and document detail page layouts

--- a/client/src/components/ArtworkTitles.css
+++ b/client/src/components/ArtworkTitles.css
@@ -1,3 +1,7 @@
 .artwork-titles .icon.white {
   color: #FFFFFF;
 }
+
+.artwork-titles.list > .item > .content > .description {
+  margin-top: 0.5rem;
+}
