--- a/client/src/components/RecordPage.css
+++ b/client/src/components/RecordPage.css
@@ -11,29 +11,13 @@
   margin-bottom: 2em;
 }
 
-.record-page .attributes-grid > .row:nth-child(odd) {
-  background-color: #f1f1f1;
-}
-
-.record-page .attributes-grid > .row > .column.label {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-weight: bold;
-}
-
-.record-page .record-page-image {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .record-page .lazy-image {
-  width: fit-content;
+  width: 250px;
+  height: 250px;
 }
 
-.record-page .lazy-image img {
-  max-height: 500px;
+.record-page .lazy-image .ui.medium.image {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
-
