--- a/client/src/pages/Search.css
+++ b/client/src/pages/Search.css
@@ -1,7 +1,3 @@
-.search > .ui.menu {
-  border-radius: 0;
-}
-
 .search .item-collection {
   padding-bottom: 1em;
 }
@@ -21,6 +17,6 @@
 
 .search .stats-container {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin-top: 0.5em;
 }
