--- a/client/src/components/SearchFacet.css
+++ b/client/src/components/SearchFacet.css
@@ -6,10 +6,12 @@
 }
 
 .search-facet.facet-list .facet-label > .label {
+  display: flex;
+  align-items: center;
   padding-right: 1em;
 }
 
 .search-facet.facet-list .facet-label .info-button {
   margin-left: 0.5em;
-  padding: 0.5em;
+  color: #000000ab !important;
 }
